@@ -1,2 +1,4 @@
 T1052832078     : preklad
 name            : default
+
+July            : Júl
