@@ -4,6 +4,9 @@
 - added: `F.cors(url, origins, methods, headers, credentials)`
 - added: `config['default-response-maxage']`, default value `11111111`
 
+- updated: Date.format() supports name of months via `MMM` (short) and `MMMM` (full)
+- updated: Resources support months e.g. `January     : Január`
+
 - fixed: binary / executable for Windows
 - fixed: SUCCESS()
 - fixed: Schema Validation is performed after F.onAuthorize().
